<resources>
    <string name="app_name">GolGappe Walaz</string>
    <string name="todo">TODO</string>
    <string name="golgappe_walaz">GolGappe Walaz</string>
    <string name="jwahar_lal_nehru_marg_nd_block_malviya_nagar_njaipur_rajasthan_302022">Jwahar Lal Nehru Marg,\nD-Block,Malviya Nagar Jaipur,Rajasthan-302022</string>
    <string name="available_24_x_7">Available 24 x 7</string>
    <string name="order_at_www_golgappewalaz_com">Order at: www.golgappewalaz.com</string>
    <string name="_91_9647718064">+919647718064</string>
    <string name="customercare_golgappewalaz_com">customercare@golgappewalaz.com</string>
    <string name="why_rush_to_gol_gappa_stores_when_the_store_is_at_your_doorstep_get_home_delivered_gol_gappe_and_fast_foods_in_just_a_one_click_fill_your_hunger_with_yummy_and_delicious_fast_foods">Why rush to Gol Gappa stores when the store is at your doorstep . Get home delivered Gol Gappe and fast foods in just a one click . Fill your hunger with yummy and delicious fast foods.</string>
</resources>
